--- a/simple-docker-image/index.html
+++ b/simple-docker-image/index.html
@@ -40,6 +40,8 @@
   ▐█▀  ▄▄██▛▀▗▟██████▙████████████████████████████████████▙▖
    ▐ ▐██▌     ██████████████████████████████████████████████
    ▝ ▝▀▀▘     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
+
+   ♥♥♥♥♥♥♥♥♥♥ CHUCK NORRIS LOVES KUBERNETES ♥♥♥♥♥♥♥♥♥♥
     </pre>
 </body>
 </html>
